[metadata]
name = J2735-python
version = 1.0.1
license = MIT
description = J2735 standard messages modules for Python based on Pyasn.1 library.
long_description = file: README.md
author = Rui Costa
author_email = mail@ruicosta.io
classifiers=


[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pyasn

[options.packages.find]
where=src